--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@google/generative-ai": "^0.21.0",
+    "axios": "^1.13.2",
+    "firebase": "^12.7.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.300.0",
-    "@google/generative-ai": "^0.21.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
