--- a/package.json
+++ b/package.json
@@ -1,41 +1,96 @@
 {
+
   "name": "greenplate-frontend",
+
   "version": "1.0.0",
+
   "description": "GreenPlate - Sustainable Food Waste Reduction Platform",
+
   "type": "module",
+
   "scripts": {
+
     "dev": "vite",
+
     "build": "tsc && vite build",
+
     "preview": "vite preview",
+
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+
     "type-check": "tsc --noEmit"
+
   },
+
   "dependencies": {
+
     "@google/generative-ai": "^0.21.0",
+
     "axios": "^1.13.2",
+
     "firebase": "^12.7.0",
+
     "framer-motion": "^11.0.0",
+
     "lucide-react": "^0.300.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+
+    "react": "19.2.0",
+
+    "react-dom": "19.2.0",
+
+    "react-native-razorpay": "^2.3.1",
+
+    "tailwindcss-animate": "^1.0.7"
+
   },
+
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+
+    "@tailwindcss/postcss": "^4.1.18",
+
+    "@types/react": "^19.0.0",
+
+    "@types/react-dom": "^19.0.0",
+
     "@typescript-eslint/eslint-plugin": "^6.14.0",
+
     "@typescript-eslint/parser": "^6.14.0",
+
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.16",
+
+    "autoprefixer": "^10.4.23",
+
     "eslint": "^8.55.0",
+
     "eslint-plugin-react-hooks": "^4.6.0",
+
     "eslint-plugin-react-refresh": "^0.4.5",
+
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
+
+    "tailwindcss": "^4.1.18",
+
     "typescript": "^5.2.2",
+
     "vite": "^5.0.8"
+
   },
+
   "engines": {
+
     "node": ">=18.0.0",
+
     "npm": ">=9.0.0"
+
+  },
+
+  "overrides": {
+
+    "react": "19.2.0",
+
+    "react-dom": "19.2.0"
+
   }
+
 }
+
