--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
 
   "dependencies": {
 
+    "@capacitor/android": "^8.0.1",
+
+    "@capacitor/cli": "^8.0.1",
+
+    "@capacitor/core": "^8.0.1",
+
     "@google/generative-ai": "^0.21.0",
 
     "axios": "^1.13.2",
@@ -37,8 +43,6 @@
     "react": "19.2.0",
 
     "react-dom": "19.2.0",
-
-    "react-native-razorpay": "^2.3.1",
 
     "tailwindcss-animate": "^1.0.7"
 
