--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 
     "@capacitor/android": "^8.0.1",
 
+    "@capacitor/camera": "^8.0.0",
+
     "@capacitor/cli": "^8.0.1",
 
     "@capacitor/core": "^8.0.1",
